<resources>
    <string name="app_name">FinalYearProject</string>
    <string name="ref_s">References</string>
    <string name="unit_s">Unit Converter</string>
    <string name="calc_s">Calculator</string>
    <string name="logic_s">Logic Designer</string>
    <string name="action_settings">Settings</string>
    <string name="convertfrom">Select a format to convert from:</string>
    <string-array name="logic_gates">
        <item>AND</item>
        <item>OR</item>
        <item>NOT</item>
        <item>NAND</item>
        <item>NOR</item>
        <item>XOR</item>
        <item>XNOR</item>
    </string-array>
    <string-array name="number_formats_calculator">
        <item>Decimal</item>
        <item>Binary</item>
        <item>Hexadecimal</item>
    </string-array>
    <string-array name="number_formats_converter">
        <item>Decimal</item>
        <item>Binary</item>
        <item>Octal</item>
        <item>Hexadecimal</item>
    </string-array>
    <string name="binary_converter_keyboard">BinaryKeyboard</string>
    <string name="binary_ime">Simple IME</string>
    <string name="subtype_en_US">English (US)</string>
    <string name="title_activity_calculator_hexadecimal_fragment">CalculatorHexadecimalFragment
    </string>

    <string name="decimalStepHowToBinary">Starting from the rightmost digit of the binary number the LSB(Least Significant Bit) you then work your way left to the MSB(Most Significant Bit), if it is a 0 then it represents a 0 in decimal too. However if it is a 1, depending on its placement in the binary number it represents 2 to the power of its postion in the number, with the position being determined by how many steps it is from the least significant bit which itself is position 0, you then add all of these together to get the decimal equivalent.\nFor example: 100 in binary represents 8 in decimal or 2 to the power of 3\nShown below is the summing of the numbers to get the decimal conversion of the previously entered Binary number.</string>
    <string name="hexadecimalStepHowToBinary">Getting the hexadecimal value of a binary number is even more straightforward than getting the decimal value.\nFirst break the binary number into blocks of 4 with the rightmost bit as the starting point, if there isn\'t enough digits for a block of 4 this is fine, just add leading 0\'s until there is. Then all that is needed to do is to convert these blocks to their decimal equivalents as shown above. These will all be numbers between 0 and 16, which corresponds to the Hexadecimal number system which starts at 0 and ends at F which represents 15.</string>
    <string name="octalStepHowToBinary">Octal is a lot like hexadecimal except the binary number is broken into blocks of 3.\nFirst break the binary number into blocks of 3 with the rightmost bit as the starting point, if there isn\'t enough digits for a block of 3 this is fine, just add leading 0\'s until there is. Then all that is needed to do is to convert these blocks to their decimal equivalents as shown above. These will all be numbers between 0 and 7, which corresponds to the Octal number system which starts at 0 and ends at 7</string>

    <string name="binaryStepHowToDecimal">To convert from decimal to binary, divide the decimal number by 2 and note whether the remainder is 1 or 0. You then take the result and continue to divide by 2 until there is nothing to divide by. The binary number is the remainders as ordered from bottom to top.</string>
    <string name="hexadecimalStepHowToDecimal">Converting from decimal to hexadecimal is similar to converting from decimal to binary, but instead of dividing by 2, you divide by 16 and the remainders are represented in hex format (0-F). The hexadecimal number is the remainders as ordered from bottom to top.</string>
    <string name="octalStepHowToDecimal">Converting from decimal to octal is also similar to the other formats, but by dividing by 8 and the remainders are between 0 to 7. The octal number is the remainders as ordered from bottom to top.</string>

    <string name="decimalStepHowToHexadecimal">To convert from hexadecimal to decimal you first take the rightmost value and multiply it by 16 to the power of its place in the number(the rightmost digits place counts as 0 and this is incremented up 1 every place to the left). These are then all added together to get the decimal value.</string>
    <string name="binaryStepHowToHexadecimal">To convert from hexadecimal to binary simply take 4 bits for each hexadecimal digit and convert the individual hexadecimal digits to their decimal equivalents, then you just convert that to a 4 bit binary number. Keeping the same order for the 4 bits as there was for the hexadecimal number.</string>
    <string name="octalStepHowToHexadecimal">To convert from hexadecimal to octal do the same as with converting hexadecimal to binary and then convert from that to octal. Break the blocks of 4 bits into blocks of 3 and simply convert to octal. Again ordering the numbers as before. </string>

    <string name="decimalStepHowToOctal">To convert from octal to decimal first take the rightmost value of the octal number and multiply it by 8 to the power of its place in the number(the rightmost digits place counts as 0 and this is incremented up 1 every place to the left) and then work your way left through the rest of the digits. Finally you add all these values together to get your result.</string>
    <string name="binaryStepHowToOctal">To convert from octal to binary simply represent each digit in the octal number as 3 bits.</string>
    <string name="hexadecimalStepHowToOctal">To convert from octal to hexadecimal do the same as before but take the blocks of 3 and change them to blocks of 4 bits by taking the binary number in one block and then breaking it up into blocks of 4, padding with 0\'s to the left if necessary.</string>


    <string name="twocomplementwarning">Setting the 2\'s complement bit length to too low can result in a loss of important information for the number</string>
</resources>
